[build-system]
requires = ["poetry-core>=2.0.0, <3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "template-repository"
version = "0.0.0"
description = ""
authors = [
    {name = "Haruno YUZUNOKI", email = "yuzunoki.haruno@gmail.com"}
]
readme = "README.md"
license = "Beerware OR MIT"
license-files = ["LICENSE_Beerware", "LICENSE_MIT"]
requires-python = ">=3.11"
dependencies = []

[project.urls]
Repository = "https://github.com/yuzunoki-haruno/template-repository"
Changelog = "https://github.com/yuzunoki-haruno/template-repository/blob/main/CHANGELOG.md"

[tool.poetry]
packages = [{include = "template_repository", from = "src"}]

[tool.black]
line-length = 127

[tool.flake8]
ignore = ["F401", "F402"]
max-line-length = 127

[tool.isort]
profile = "black"
line_length = 127

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
check_untyped_defs = true
